fix: calendar empty parens, date picker spacing, and icon centering

--- a/packages/web/assets/tailwind.css
+++ b/packages/web/assets/tailwind.css
@@ -633,9 +633,6 @@
   .h-24 {
     height: calc(var(--spacing) * 24);
   }
-  .h-32 {
-    height: calc(var(--spacing) * 32);
-  }
   .h-\[1\.15rem\] {
     height: 1.15rem;
   }
@@ -758,9 +755,6 @@
   }
   .w-\[280px\] {
     width: 280px;
-  }
-  .w-\[300px\] {
-    width: 300px;
   }
   .w-\[350px\] {
     width: 350px;
@@ -892,9 +886,6 @@
   }
   .animate-spin {
     animation: var(--animate-spin);
-  }
-  .cursor-context-menu {
-    cursor: context-menu;
   }
   .cursor-default {
     cursor: default;
@@ -1056,13 +1047,6 @@
       --tw-space-x-reverse: 0;
       margin-inline-start: calc(calc(var(--spacing) * 2) * var(--tw-space-x-reverse));
       margin-inline-end: calc(calc(var(--spacing) * 2) * calc(1 - var(--tw-space-x-reverse)));
-    }
-  }
-  .space-x-3 {
-    :where(& > :not(:last-child)) {
-      --tw-space-x-reverse: 0;
-      margin-inline-start: calc(calc(var(--spacing) * 3) * var(--tw-space-x-reverse));
-      margin-inline-end: calc(calc(var(--spacing) * 3) * calc(1 - var(--tw-space-x-reverse)));
     }
   }
   .space-x-4 {
@@ -1351,9 +1335,6 @@
   }
   .p-6 {
     padding: calc(var(--spacing) * 6);
-  }
-  .p-8 {
-    padding: calc(var(--spacing) * 8);
   }
   .p-\[1px\] {
     padding: 1px;
